<resources>
    <string name="app_name">Food Panda Application Design</string>
    <string name="pizza">New York Pizza</string>
    <string name="popular">Popular</string>
    <string name="favorite">Favorite</string>
    <string name="dis">Profile Image</string>
    <string name="pizza1">Chicken Tikka Pizza</string>
    <string name="ingridents">Onion, cheese, chicken, olive</string>
    <string name="price">RS. 500.00</string>
    <string name="pizza2">Chicken Fajita Pizza</string>
    <string name="pizza3">Chicago Pizza</string>
    <string name="pizza4">Tandoori Pizza</string>
</resources>