<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/profile_pizza"
        android:contentDescription="@string/dis"
        android:scaleType="fitXY"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pizza"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#E91E63"
        android:textAlignment="center"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popular"
            android:backgroundTint="#E91E63"
            android:textStyle="bold"
            android:layout_marginStart="7dp"
            android:layout_marginTop="10dp" />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="98dp"
            android:layout_height="40dp"
            android:text="@string/favorite"
            android:textColor="#7A2E2C2C"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_border"/>

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popular"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:padding="12dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pizza1"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:paddingTop="15dp"
                    android:paddingStart="12dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ingridents"
                    android:textColor="#9C3A3A3A"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:paddingStart="12dp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:paddingStart="18dp"
                        android:paddingTop="17dp"/>
                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/popular"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:background="@drawable/rounded_tag"
                        android:layout_marginStart="20dp"
                        android:drawablePadding="5dp"
                        android:paddingStart="5dp"
                        app:drawableStartCompat="@drawable/fire" />
                </LinearLayout>

            </LinearLayout>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:src="@drawable/chiken_tikka"
                android:scaleType="fitXY"
                android:layout_marginHorizontal="70dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pizza2"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:paddingTop="15dp"
                    android:paddingStart="12dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ingridents"
                    android:textColor="#9C3A3A3A"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:paddingStart="12dp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:paddingStart="18dp"
                        android:paddingTop="17dp"/>
                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/popular"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:background="@drawable/rounded_tag"
                        android:layout_marginStart="20dp"
                        android:drawablePadding="5dp"
                        android:paddingStart="5dp"
                        app:drawableStartCompat="@drawable/fire" />
                </LinearLayout>

            </LinearLayout>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:src="@drawable/chiken_fajita"
                android:scaleType="fitXY"
                android:layout_marginHorizontal="70dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pizza3"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:paddingTop="15dp"
                    android:paddingStart="12dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ingridents"
                    android:textColor="#9C3A3A3A"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:paddingStart="12dp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:paddingStart="18dp"
                        android:paddingTop="17dp"/>
                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/popular"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:background="@drawable/rounded_tag"
                        android:layout_marginStart="20dp"
                        android:drawablePadding="5dp"
                        android:paddingStart="5dp"
                        app:drawableStartCompat="@drawable/fire" />
                </LinearLayout>

            </LinearLayout>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:src="@drawable/chicago_pizza"
                android:scaleType="fitXY"
                android:layout_marginHorizontal="70dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pizza4"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:paddingTop="15dp"
                    android:paddingStart="12dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ingridents"
                    android:textColor="#9C3A3A3A"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:paddingStart="12dp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:paddingStart="18dp"
                        android:paddingTop="17dp"/>
                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/popular"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:background="@drawable/rounded_tag"
                        android:layout_marginStart="20dp"
                        android:drawablePadding="5dp"
                        android:paddingStart="5dp"
                        app:drawableStartCompat="@drawable/fire" />
                </LinearLayout>

            </LinearLayout>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:src="@drawable/tandoori_pizza"
                android:scaleType="fitXY"
                android:layout_marginHorizontal="70dp"
                />
        </LinearLayout>

    </LinearLayout>

  </LinearLayout>